--- a/css/global.css
+++ b/css/global.css
@@ -1,4 +1,60 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600;700&display=swap");
+body {
+  --body-bg-color:#fff;
+  --nav-link-color:#000;
+  --nav-link-hover-color:#33c0a5;
+  --header-bg-color:#e5e5e5;
+  --banner-heading-color:#f3f3f3;
+  --banner-sub-heading-color:#a8a8a8;
+  --banner-btn-bg-color:#3f8dbf;
+  --banner-btn-bg-hover-color:#fff;
+  --banner-btn-text-color:#fff;
+  --banner-btn-text-hover-color:#3f8dbf;
+  --services-heading-color:#4e4e4e;
+  --services-border-color:#6b6767;
+  --body-text-color:#616161;
+  --work-sub-heading-color:#a8a8a8;
+  --work-sub-heading-color:#a8a8a8;
+  --footer-heading-color:#6c6c6c;
+  --footer-text-color:#cacaca;
+  --footer-bg-color:#000;
+  --footer-icon-color:#a89574;
+  --sidebar-text-color:#818181;
+  --testmonial-bg-color:#e5e5e5; }
+
+body.dark-theme {
+  --nav-link-color:#fff;
+  --header-bg-color:#000;
+  --body-bg-color:#A9A9A9; }
+
+body {
+  --body-bg-color:#fff;
+  --nav-link-color:#000;
+  --nav-link-hover-color:#33c0a5;
+  --header-bg-color:#e5e5e5;
+  --banner-heading-color:#f3f3f3;
+  --banner-sub-heading-color:#a8a8a8;
+  --banner-btn-bg-color:#3f8dbf;
+  --banner-btn-bg-hover-color:#fff;
+  --banner-btn-text-color:#fff;
+  --banner-btn-text-hover-color:#3f8dbf;
+  --services-heading-color:#4e4e4e;
+  --services-border-color:#6b6767;
+  --body-text-color:#616161;
+  --work-sub-heading-color:#a8a8a8;
+  --work-sub-heading-color:#a8a8a8;
+  --footer-heading-color:#6c6c6c;
+  --footer-text-color:#cacaca;
+  --footer-bg-color:#000;
+  --footer-icon-color:#a89574;
+  --sidebar-text-color:#818181;
+  --testmonial-bg-color:#e5e5e5; }
+
+body.dark-theme {
+  --nav-link-color:#fff;
+  --header-bg-color:#000;
+  --body-bg-color:#A9A9A9; }
+
 * {
   margin: 0;
   padding: 0;
@@ -18,7 +74,8 @@
   min-height: calc(100vh - 500px); }
 
 body {
-  font-family: "Roboto Slab", serif;
+  background-color: var(--body-bg-color);
+  font-family: 'Roboto Slab', serif;
   margin: 0;
   min-width: 320px;
   -webkit-text-size-adjust: 100%;
@@ -33,19 +90,19 @@ body {
 
 a {
   text-decoration: none;
-  color: #000; }
+  color: var(--nav-link-color); }
 
 h1, h2, p, button, a {
-  font-family: "Roboto Slab", serif; }
+  font-family: 'Roboto Slab', serif; }
 
 address {
   font-style: inherit; }
 
 .btn-primary {
-  background-color: #3f8dbf;
-  color: #fff;
+  background-color: var(--banner-btn-bg-color);
+  color: var(--banner-btn-text-color);
   padding: 10px 10px;
-  border: 1px solid #3f8dbf;
+  border: 1px solid var(--banner-btn-bg-color);
   outline: none;
   border-radius: 2px;
   font-size: 14px;
@@ -54,9 +111,9 @@ address {
   cursor: pointer;
   text-transform: uppercase; }
   .btn-primary:hover {
-    background-color: #fff;
-    color: #3f8dbf;
-    border: 1px solid #fff;
+    background-color: var(--banner-btn-bg-hover-color);
+    color: var(--banner-btn-text-hover-color);
+    border: 1px solid var(--banner-btn-bg-hover-color);
     transition: all .5s; }
 
 .d-flex {
@@ -116,8 +173,36 @@ select {
 *:focus {
   outline: none; }
 
+body {
+  --body-bg-color:#fff;
+  --nav-link-color:#000;
+  --nav-link-hover-color:#33c0a5;
+  --header-bg-color:#e5e5e5;
+  --banner-heading-color:#f3f3f3;
+  --banner-sub-heading-color:#a8a8a8;
+  --banner-btn-bg-color:#3f8dbf;
+  --banner-btn-bg-hover-color:#fff;
+  --banner-btn-text-color:#fff;
+  --banner-btn-text-hover-color:#3f8dbf;
+  --services-heading-color:#4e4e4e;
+  --services-border-color:#6b6767;
+  --body-text-color:#616161;
+  --work-sub-heading-color:#a8a8a8;
+  --work-sub-heading-color:#a8a8a8;
+  --footer-heading-color:#6c6c6c;
+  --footer-text-color:#cacaca;
+  --footer-bg-color:#000;
+  --footer-icon-color:#a89574;
+  --sidebar-text-color:#818181;
+  --testmonial-bg-color:#e5e5e5; }
+
+body.dark-theme {
+  --nav-link-color:#fff;
+  --header-bg-color:#000;
+  --body-bg-color:#A9A9A9; }
+
 #header {
-  background-color: #e5e5e5; }
+  background-color: var(--header-bg-color); }
   #header .header-flex {
     padding: 16px 15px; }
   #header .logo {
@@ -129,13 +214,13 @@ select {
       #header #nav ul li {
         margin: 0 0 0 20px; }
         #header #nav ul li a {
-          color: #000;
+          color: var(--nav-link-color);
           font-size: 16px;
           text-transform: uppercase; }
           #header #nav ul li a:hover {
-            color: #33c0a5;
+            color: var(--nav-link-hover-color);
             transition: all .5s; }
-  #header i {
+  #header .hamburger-menu {
     display: none;
     font-size: 24px;
     cursor: pointer; }
@@ -146,7 +231,7 @@ select {
     top: 0;
     left: -50%;
     width: 50%;
-    background-color: #000;
+    background-color: var(--footer-bg-color);
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px; }
@@ -154,11 +239,11 @@ select {
       padding: 8px 8px 8px 32px;
       text-decoration: none;
       font-size: 20px;
-      color: #818181;
+      color: var(--sidebar-text-color);
       display: block;
       transition: 0.3s; }
       #header .sidenav a:hover {
-        color: #33c0a5; }
+        color: var(--nav-link-hover-color); }
     #header .sidenav .closebtn {
       position: absolute;
       top: -10px;
@@ -166,7 +251,7 @@ select {
       font-size: 30px;
       margin-left: 50px; }
       #header .sidenav .closebtn:hover {
-        color: #33c0a5; }
+        color: var(--nav-link-hover-color); }
     #header .sidenav.sidenav-show {
       left: 0; }
 
@@ -188,15 +273,15 @@ select {
     height: 100%; }
     .banner-centering h1 {
       font-size: 40px;
-      color: #f3f3f3;
+      color: var(--banner-heading-color);
       margin-bottom: 10px; }
     .banner-centering h2 {
       font-size: 32px;
-      color: #a8a8a8;
+      color: var(--banner-sub-heading-color);
       margin-bottom: 10px; }
 
 .services-section {
-  border-bottom: 1px solid #6b6767;
+  border-bottom: 1px solid var(--services-border-color);
   margin-bottom: 40px; }
   .services-section .col {
     flex-basis: 25%;
@@ -204,11 +289,11 @@ select {
     margin-bottom: 50px; }
     .services-section .col h3 {
       font-size: 18px;
-      color: #4e4e4e;
+      color: var(--services-heading-color);
       padding: 15px 0; }
     .services-section .col p {
       font-size: 14px;
-      color: #616161; }
+      color: var(--body-text-color); }
     .services-section .col img {
       margin: 0 auto;
       display: block;
@@ -218,7 +303,7 @@ select {
 
 .section-work h3 {
   font-size: 18px;
-  color: #4e4e4e;
+  color: var(--services-heading-color);
   margin-bottom: 40px; }
 
 .section-work-grid {
@@ -232,25 +317,25 @@ select {
       object-fit: cover; }
     .section-work-grid .col .col-content h4 {
       font-size: 18px;
-      color: #4e4e4e;
+      color: var(--services-heading-color);
       padding: 18px 0; }
     .section-work-grid .col .col-content h5 {
       font-size: 13px;
-      color: #a8a8a8;
+      color: var(--work-sub-heading-color);
       padding-bottom: 15px; }
     .section-work-grid .col .col-content p {
       font-size: 14px;
-      color: #616161;
+      color: var(--body-text-color);
       line-height: 30px; }
 
 .section-testmonials {
-  background-color: #e5e5e5; }
+  background-color: var(--testmonial-bg-color); }
 
 #footer {
-  background-color: #000;
+  background-color: var(--footer-bg-color);
   padding: 50px 0; }
   #footer .footer-grid {
-    border-bottom: 1px solid #6b6767;
+    border-bottom: 1px solid var(--services-border-color);
     margin-bottom: 50px; }
     #footer .footer-grid .footer-column-container {
       margin: 0 -20px; }
@@ -261,37 +346,37 @@ select {
         display: none; }
       #footer .footer-grid .footer-col .title {
         font-size: 18px;
-        color: #6c6c6c; }
+        color: var(--footer-heading-color); }
       #footer .footer-grid .footer-col ul {
         list-style: none;
         margin-top: 30px; }
         #footer .footer-grid .footer-col ul li {
-          color: #cacaca;
+          color: var(--footer-text-color);
           font-size: 14px;
           padding-bottom: 25px;
           display: flex;
           font-weight: 300; }
           #footer .footer-grid .footer-col ul li a {
-            color: #cacaca; }
+            color: var(--footer-text-color); }
           #footer .footer-grid .footer-col ul li span {
             display: block;
             padding-top: 9px; }
           #footer .footer-grid .footer-col ul li i {
-            color: #a89574;
+            color: var(--footer-text-color);
             font-size: 10px;
             margin: 5px 6px 0 0; }
       #footer .footer-grid .footer-col p {
         font-size: 14px;
-        color: #cacaca;
+        color: var(--footer-text-color);
         padding-bottom: 10px; }
         #footer .footer-grid .footer-col p i {
-          color: #a89574;
+          color: var(--footer-icon-color);
           font-size: 10px;
           margin: 5px 6px 0 0; }
   #footer-copyright {
     max-width: 1140px;
     margin: 0 auto;
-    color: #cacaca;
+    color: var(--footer-text-color);
     padding: 0 15px; }
 
 @media (max-width: 1030px) {
@@ -320,7 +405,7 @@ select {
     font-size: 18px; }
   #header #nav {
     display: none; }
-  #header i {
+  #header .hamburger-menu {
     display: block; }
   .services-section .col {
     flex-basis: 50%; }
@@ -361,13 +446,13 @@ select {
         padding: 0; }
         #footer .footer-grid .footer-col .icon-plus {
           display: block;
-          color: #fff;
+          color: var(--banner-btn-text-color);
           position: absolute;
           top: 0;
           right: 0; }
         #footer .footer-grid .footer-col .footer-content {
           display: none; }
         #footer .footer-grid .footer-col .title {
-          color: #fff; }
+          color: var(--banner-btn-text-color); }
     #footer-copyright p {
       font-size: 14px; } }
