--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600;700&display=swap');
 @import "variables";
-$roboto-slab: 'Roboto Slab', serif;
-$open-sans: 'Open Sans', sans-serif;
 
 * {
   margin: 0;
@@ -25,7 +23,8 @@ $open-sans: 'Open Sans', sans-serif;
 }
 
 body {
-  font-family: $roboto-slab;
+  background-color: var(--body-bg-color);
+  font-family: 'Roboto Slab', serif;
   margin: 0;
   min-width: 320px;
   -webkit-text-size-adjust: 100%;
@@ -42,20 +41,20 @@ body {
 
 a {
   text-decoration: none;
-  color: $nav-link-color;
+  color: var(--nav-link-color);
 }
 
 h1, h2, p, button, a {
-  font-family: $roboto-slab;
+  font-family: 'Roboto Slab', serif;
 }
 address{
   font-style: inherit;
 }
 .btn-primary{
-  background-color: $banner-btn-bg-color;
-  color: $banner-btn-text-color;
+  background-color: var(--banner-btn-bg-color);
+  color: var(--banner-btn-text-color);
   padding: 10px 10px;
-  border: 1px solid $banner-btn-bg-color;
+  border: 1px solid var(--banner-btn-bg-color);
   outline: none;
   border-radius: 2px;
   font-size: 14px;
@@ -64,9 +63,9 @@ address{
   cursor: pointer;
   text-transform: uppercase;
   &:hover{
-    background-color: $banner-btn-bg-hover-color;
-    color: $banner-btn-text-hover-color;
-    border: 1px solid $banner-btn-bg-hover-color;
+    background-color: var(--banner-btn-bg-hover-color);
+    color: var(--banner-btn-text-hover-color);
+    border: 1px solid var(--banner-btn-bg-hover-color);
     transition: all .5s;
   }
 }
